Finished adding the cards required for the videos with details about each video as well as tags

--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -5,22 +5,138 @@
     </head>
     <body>
         <div class="container-fluid row text-center" style="padding-top: 60px; padding-left: 40px; padding-bottom: 40px;">
-            <div class="row content">
-                <div class="col-sm-12 text-left">
+            <div class="row">
+                <div class="col-sm-12 text-left" id="heading">
                     <h1>Club Recordings</h1>
                 </div>
-                <div class="col-sm-12 text-left" style="padding-top: 20px; padding-left: 40px;">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-left" id="subheading">
+                    <h3>2022</h3>
+                    <hr>
                 </div>
-
-                <flip-card variant="hover" class="trivia-card">
-                    <div slot="front">
-                        Club recording 1
-                    </div>
-                    <div slot="back">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                </flip-card>
+            </div>
+            <div class="row">
+                <div class="col-sm" id="container">
+                    <flip-card variant="hover" class="trivia-card">
+                        <div slot="front" class="card-face">
+                            <div id="container-text">
+                                <b>Title</b>: Club recording 1
+                                <br>
+                                <b>Presenter</b>: Somebody
+                                <br>
+                                <b>Date</b>: 01/29/2022
+                            </div>
+                            <div id="container-tags">
+                                <b>Tags: </b>
+                                <button type="button" class="btn btn-secondary">
+                                    Linux
+                                </button>
+                            </div>
+                        </div>
+                        <div slot="back" class="card-face">
+                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </flip-card>
+                </div>
+                <div class="col-sm" id="container">
+                    <flip-card variant="hover" class="trivia-card">
+                        <div slot="front" class="card-face">
+                            <div id="container-text">
+                                <b>Title</b>: Club recording 2
+                                <br>
+                                <b>Presenter</b>: Somebody
+                                <br>
+                                <b>Date</b>: 01/29/2022
+                            </div>
+                            <div id="container-tags">
+                                <b>Tags: </b>
+                                <button type="button" class="btn btn-secondary">
+                                    Linux
+                                </button>
+                            </div>
+                        </div>
+                        <div slot="back" class="card-face">
+                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </flip-card>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 text-left" id="subheading">
+                    <h3>2021</h3>
+                    <hr>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm" id="container">
+                    <flip-card variant="hover" class="trivia-card">
+                        <div slot="front" class="card-face">
+                            <div id="container-text">
+                                <b>Title</b>: Club recording 3
+                                <br>
+                                <b>Presenter</b>: Somebody
+                                <br>
+                                <b>Date</b>: 01/29/2021
+                            </div>
+                            <div id="container-tags">
+                                <b>Tags: </b>
+                                <button type="button" class="btn btn-secondary">
+                                    Linux
+                                </button>
+                            </div>
+                        </div>
+                        <div slot="back" class="card-face">
+                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </flip-card>
+                </div>
+                <div class="col-sm" id="container">
+                    <flip-card variant="hover" class="trivia-card">
+                        <div slot="front" class="card-face">
+                            <div id="container-text">
+                                <b>Title</b>: Club recording 4
+                                <br>
+                                <b>Presenter</b>: Somebody
+                                <br>
+                                <b>Date</b>: 01/29/2021
+                            </div>
+                            <div id="container-tags">
+                                <b>Tags: </b>
+                                <button type="button" class="btn btn-secondary">
+                                    Linux
+                                </button>
+                            </div>
+                        </div>
+                        <div slot="back" class="card-face">
+                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </flip-card>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm" id="container">
+                    <flip-card variant="hover" class="trivia-card">
+                        <div slot="front" class="card-face">
+                            <div id="container-text">
+                                <b>Title</b>: Club recording 5
+                                <br>
+                                <b>Presenter</b>: Somebody
+                                <br>
+                                <b>Date</b>: 01/29/2021
+                            </div>
+                            <div id="container-tags">
+                                <b>Tags: </b>
+                                <button type="button" class="btn btn-secondary">
+                                    Linux
+                                </button>
+                            </div>
+                        </div>
+                        <div slot="back" class="card-face">
+                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </flip-card>
+                </div>
             </div>
         </div>
     </body>
