added dynamic rows for horizontal format. added social icons (still waiting on people to get back to me regarding links).

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -18,7 +18,6 @@
             <div class="col">
                 <p> Allen Foust </p>
                 <img src ="/src/assets/img/DevilSecLogo.png" style="width:200px;height:200px;"></img>
-            
                 <div> 
                 <a href="https://github.com/" target="_blank">
                 <img src="/src/assets/img/github.svg" style="width:30px;height:30px;"></img>
@@ -235,7 +234,7 @@
                 <p>Prithviraj</p>
                 <img src="/src/assets/img/prithvi.png" style="width:200px;height:200px;"></img>
                 <div> 
-                <a href="https://github.com/" target="_blank">
+                <a href="https://github.com/prithvidiamond1" target="_blank">
                 <img src="/src/assets/img/github.svg" style="width:30px;height:30px;"></img>
 		        </a>
                 
