--- a/src/pages/videos.html
+++ b/src/pages/videos.html
@@ -16,50 +16,75 @@
                     <hr>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm" id="container">
-                    <flip-card variant="hover" class="trivia-card">
-                        <div slot="front" class="card-face">
-                            <div id="container-text">
-                                <b>Title</b>: Club recording 1
-                                <br>
-                                <b>Presenter</b>: Somebody
-                                <br>
-                                <b>Date</b>: 01/29/2022
-                            </div>
-                            <div id="container-tags">
-                                <b>Tags: </b>
-                                <button type="button" class="btn btn-secondary">
-                                    Linux
-                                </button>
-                            </div>
-                        </div>
-                        <div slot="back" class="card-face">
+            <div class="row" id="video-cards">
+                <div class="card border-dark mb-3" style="max-width: 18rem;">
+                    <div class="card-header bg-transparent border-dark">
+                        <h5 class="card-title">
+                            <b>Club recording 1</b>
+                        </h5>
+                    </div>
+                    <div class="card-body text-dark">
+                        <p class="card-text">
                             <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                    <div class="card-footer bg-transparent border-dark">
+                        <b>Presenter</b>: Somebody
+                        <br>
+                        <b>Date</b>: 01/29/2022
+                        <div id="card-tags">
+                            <b>Tags: </b>
+                            <button id="tags" type="button" class="btn btn-secondary">
+                                Linux
+                            </button>
                         </div>
-                    </flip-card>
+                    </div>
                 </div>
-                <div class="col-sm" id="container">
-                    <flip-card variant="hover" class="trivia-card">
-                        <div slot="front" class="card-face">
-                            <div id="container-text">
-                                <b>Title</b>: Club recording 2
-                                <br>
-                                <b>Presenter</b>: Somebody
-                                <br>
-                                <b>Date</b>: 01/29/2022
-                            </div>
-                            <div id="container-tags">
-                                <b>Tags: </b>
-                                <button type="button" class="btn btn-secondary">
-                                    Linux
-                                </button>
-                            </div>
-                        </div>
-                        <div slot="back" class="card-face">
+                <div class="card border-dark mb-3" style="max-width: 18rem;">
+                    <div class="card-header bg-transparent border-dark">
+                        <h5 class="card-title">
+                            <b>Club recording 2</b>
+                        </h5>
+                    </div>
+                    <div class="card-body text-dark">
+                        <p class="card-text">
                             <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                    <div class="card-footer bg-transparent border-dark">
+                        <b>Presenter</b>: Somebody
+                        <br>
+                        <b>Date</b>: 01/29/2022
+                        <div id="card-tags">
+                            <b>Tags: </b>
+                            <button id="tags" type="button" class="btn btn-secondary">
+                                Linux
+                            </button>
                         </div>
-                    </flip-card>
+                    </div>
+                </div>
+                <div class="card border-dark mb-3" style="max-width: 18rem;">
+                    <div class="card-header bg-transparent border-dark">
+                        <h5 class="card-title">
+                            <b>Club recording 3</b>
+                        </h5>
+                    </div>
+                    <div class="card-body text-dark">
+                        <p class="card-text">
+                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                    <div class="card-footer bg-transparent border-dark">
+                        <b>Presenter</b>: Somebody
+                        <br>
+                        <b>Date</b>: 01/29/2022
+                        <div id="card-tags">
+                            <b>Tags: </b>
+                            <button id="tags" type="button" class="btn btn-secondary">
+                                Linux
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
@@ -68,74 +93,52 @@
                     <hr>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm" id="container">
-                    <flip-card variant="hover" class="trivia-card">
-                        <div slot="front" class="card-face">
-                            <div id="container-text">
-                                <b>Title</b>: Club recording 3
-                                <br>
-                                <b>Presenter</b>: Somebody
-                                <br>
-                                <b>Date</b>: 01/29/2021
-                            </div>
-                            <div id="container-tags">
-                                <b>Tags: </b>
-                                <button type="button" class="btn btn-secondary">
-                                    Linux
-                                </button>
-                            </div>
-                        </div>
-                        <div slot="back" class="card-face">
+            <div class="row" id="video-cards">
+                <div class="card border-dark mb-3" style="max-width: 18rem;">
+                    <div class="card-header bg-transparent border-dark">
+                        <h5 class="card-title">
+                            <b>Club recording 4</b>
+                        </h5>
+                    </div>
+                    <div class="card-body text-dark">
+                        <p class="card-text">
                             <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                    <div class="card-footer bg-transparent border-dark">
+                        <b>Presenter</b>: Somebody
+                        <br>
+                        <b>Date</b>: 01/29/2021
+                        <div id="card-tags">
+                            <b>Tags: </b>
+                            <button id="tags" type="button" class="btn btn-secondary">
+                                Linux
+                            </button>
                         </div>
-                    </flip-card>
+                    </div>
                 </div>
-                <div class="col-sm" id="container">
-                    <flip-card variant="hover" class="trivia-card">
-                        <div slot="front" class="card-face">
-                            <div id="container-text">
-                                <b>Title</b>: Club recording 4
-                                <br>
-                                <b>Presenter</b>: Somebody
-                                <br>
-                                <b>Date</b>: 01/29/2021
-                            </div>
-                            <div id="container-tags">
-                                <b>Tags: </b>
-                                <button type="button" class="btn btn-secondary">
-                                    Linux
-                                </button>
-                            </div>
-                        </div>
-                        <div slot="back" class="card-face">
+                <div class="card border-dark mb-3" style="max-width: 18rem;">
+                    <div class="card-header bg-transparent border-dark">
+                        <h5 class="card-title">
+                            <b>Club recording 5</b>
+                        </h5>
+                    </div>
+                    <div class="card-body text-dark">
+                        <p class="card-text">
                             <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </p>
+                    </div>
+                    <div class="card-footer bg-transparent border-dark">
+                        <b>Presenter</b>: Somebody
+                        <br>
+                        <b>Date</b>: 01/29/2021
+                        <div id="card-tags">
+                            <b>Tags: </b>
+                            <button id="tags" type="button" class="btn btn-secondary">
+                                Linux
+                            </button>
                         </div>
-                    </flip-card>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm" id="container">
-                    <flip-card variant="hover" class="trivia-card">
-                        <div slot="front" class="card-face">
-                            <div id="container-text">
-                                <b>Title</b>: Club recording 5
-                                <br>
-                                <b>Presenter</b>: Somebody
-                                <br>
-                                <b>Date</b>: 01/29/2021
-                            </div>
-                            <div id="container-tags">
-                                <b>Tags: </b>
-                                <button type="button" class="btn btn-secondary">
-                                    Linux
-                                </button>
-                            </div>
-                        </div>
-                        <div slot="back" class="card-face">
-                            <iframe class="video-embed" src="https://www.youtube.com/embed/videoseries?list=PLGFrENm0agVfgQYZhu07KjDksPIljzGRu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                        </div>
-                    </flip-card>
+                    </div>
                 </div>
             </div>
         </div>
