--- a/src/pages/connect.html
+++ b/src/pages/connect.html
@@ -8,7 +8,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://discord.gg/JFq44mJ" target="_blank">
                     <div class="div-highlight">
-                        <img src="/node_modules/simple-icons/icons/discord.svg" alt="Join our Discord!" style="width:50px; height:50px;"></img>
+                        <i class="discord" alt="Join our Discord!" style="width:50px; height:50px;"></i>
                         <p>Join our Discord server!</p>
                     </div>
                 </a>
@@ -16,7 +16,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://www.youtube.com/channel/UCMa2NO8KJ4DaTQ1i507nVcQ" target="_blank">
                     <div class="div-highlight">
-                        <img src="/node_modules/simple-icons/icons/youtube.svg" alt="Watch us on YouTube!" style="width:50px; height:50px;"></img>
+                        <i class="youtube" alt="Watch us on YouTube!" style="width:50px; height:50px;"></i>
                         <p>Watch our YouTube videos!</p>
                     </div>
                 </a>
@@ -24,7 +24,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://twitter.com/devilsecasu" target="_blank">
                     <div class="div-highlight">
-                        <img src="/node_modules/simple-icons/icons/twitter.svg" alt="Read our Tweets!" style="width:50px; height:50px;"></img>
+                        <i class="twitter" alt="Read our Tweets!" style="width:50px; height:50px;"></i>
                         <p>Follow us on Twitter!</p>
                     </div>
                 </a>
@@ -32,7 +32,7 @@
             <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
                 <a href="https://www.twitch.tv/devilsec" target="_blank">
                     <div class="div-highlight">
-                        <img src="/node_modules/simple-icons/icons/twitch.svg" alt="See us live on Twitch!" style="width=50px; height:50px;"></img>
+                        <i class="twitch" alt="See us live on Twitch!" style="width=50px; height:50px;"></i>
                         <p>See us live on Twitch!</p>
                     </div>
                 </a>
