Updated the colors and other parts of the CSS for both the homepage and the videos page. Fixed the positioning of the main banner buttons in the homepage.

--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,17 @@
     <main style="margin-bottom:15px;">
         <div class="container-fluid text-center">
             <div class="container">
-                <div class="p-5 my-4 bg-light rounded-3">
+                <div class="p-5 my-4 bg-light rounded-3" id="main-banner">
                     <h1 class="style2" style="font-size:150px;">DevilSec</h1>
-
-                    <p class="lead">Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.</p>
-
-                    <p><a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a> <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a> <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a> <a href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a></p>
+                    <p class="lead">
+                        Libero non porta mus magna? Cras faucibus penatibus sollicitudin felis ac tortor eget congue risus. Adipiscing faucibus id non et himenaeos dolor! Donec, ante consectetur nascetur suscipit ante quam natoque libero. Fringilla gravida.
+                    </p>
+                    <p>
+                        <a id="main-banner-button" href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a>
+                        <a id="main-banner-button" href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a>
+                        <a id="main-banner-button" href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a> 
+                        <a id="main-banner-button" href="https://www.tutorialrepublic.com" target="_blank" class="btn btn-success btn-lg" style="margin-left: 50px;">Button w/ content</a>
+                    </p>
                 </div>
 
                 <div class="grid2x2">
