Completed the primary facing schedule page

--- a/src/pages/schedule.html
+++ b/src/pages/schedule.html
@@ -89,247 +89,65 @@
                 </div>
 
                 <hr class="schedule-divider">
-                <!-- Increase and improve spacing to make sure there is a clear distinction between the above upcoming presentations and these sections -->
 
                 <div class="container-fluid text-center px-4">
                     <div class="row gx-5">
-                        <div class="col-md-3">
-                            <div class="col p-2">
-                                <div class="column-header">
-                                    <h2 class="column-title">Presentations</h2>
-
-                                    <p>Upcoming presentations on a particular topic.</p>
-                                </div>
-
+                        <div class="col-lg-4">
+                            <div class="schedule-category">
+                                <h2 class="column-title">Presentations and Workshops</h2>
                                 <div class="row row-cols-1">
                                     <div class="col">
-                                        <div class="card rounded-3">
-                                            <h3>Lorem Ipsum</h3>
-
-                                            <h4>Date: February 30 0000</h4>
-
-                                            <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                            <h4>Location: Test house</h4>
-
-                                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                        </div>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
+                                        <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal">
+                                            <h3 class="card-title">{{ Event Name }}</h3>
+                                            <ul class="list-group center list-group-flush">
+                                                <li class="list-group-item h5"><i class="calendar"></i>{{ Date }}</li>
+                                                <li class="list-group-item h5"><i class="clock"></i>{{ Time }}</li>
+                                                <li class="list-group-item h5"><i class="location"></i>{{ Location }}</li>
+                                            </ul>
+                                            <div class="card-text">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
+                                            </div>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-md-3">
-                            <div class="col p-2">
-                                <div class="column-header">
-                                    <h2 class="column-title">Competitions</h2>
-
-                                    <p>Upcoming competitions and CTFs.</p>
-                                </div>
-
-                                <div class="row row-cols-1 boxes">
+                        <div class="col-lg-4">
+                            <div class="schedule-category">
+                                <h2 class="column-title">Guest Talks</h2>
+                                <div class="row row-cols-1">
                                     <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
+                                        <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal">
+                                            <h3 class="card-title">{{ Event Name }}</h3>
+                                            <ul class="list-group center list-group-flush">
+                                                <li class="list-group-item h5"><i class="calendar"></i>{{ Date }}</li>
+                                                <li class="list-group-item h5"><i class="clock"></i>{{ Time }}</li>
+                                                <li class="list-group-item h5"><i class="location"></i>{{ Location }}</li>
+                                            </ul>
+                                            <div class="card-text">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
+                                            </div>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
                         </div>
-
-                        <div class="col-md-3">
-                            <div class="col-md-12 p-2">
-                                <div class="column-header">
-                                    <h2 class="column-title">Guest Speakers</h2>
-
-                                    <p>Upcoming guest speaker presentations.</p>
-                                </div>
-
-                                <div class="row row-cols-1 boxes">
+                        <div class="col-lg-4">
+                            <div class="schedule-category">
+                                <h2 class="column-title">Competitions</h2>
+                                <div class="row row-cols-1">
                                     <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-md-3">
-                            <div class="col-md-12 p-2">
-                                <div class="column-header">
-                                    <h2 class="column-title">Miscellaneous</h2>
-
-                                    <p>Upcoming miscellaneous events.</p>
-                                </div>
-
-                                <div class="row row-cols-1 boxes">
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
-                                    </div>
-
-                                    <div class="col">
-                                        <h3>Lorem Ipsum</h3>
-
-                                        <h4>Date: February 30 0000</h4>
-
-                                        <h4>Time: 00:00 - 19:00 MST</h4>
-
-                                        <h4>Location: Test house</h4>
-
-                                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
+                                        <button type="button" class="schedule-card" data-bs-toggle="modal" data-bs-target="#eventModal">
+                                            <h3 class="card-title">{{ Event Name }}</h3>
+                                            <ul class="list-group center list-group-flush">
+                                                <li class="list-group-item h5"><i class="calendar"></i>{{ Date }}</li>
+                                                <li class="list-group-item h5"><i class="clock"></i>{{ Time }}</li>
+                                                <li class="list-group-item h5"><i class="location"></i>{{ Location }}</li>
+                                            </ul>
+                                            <div class="card-text">
+                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in lorem libero. Donec volutpat tempus volutpat. Morbi ipsum quam, facilisis non tempus eget, molestie ac justo.</p>
+                                            </div>
+                                        </button>
                                     </div>
                                 </div>
                             </div>
@@ -337,6 +155,5 @@
                     </div>
                 </div>
             </div>
-        </div>
     </body>
 </html>
